# aegis

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_ABOUT.md  HELP.md  README.md  SECURITY.md  install.sh  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
aegis/: __init__.py  __main__.py  mcp_server.py
aegis/api/: __init__.py  app.py
aegis/core/: __init__.py  ai_client.py  ai_orchestrator.py  async_runner.py  bootstrap.py  burp_importer.py  campaign_runner.py  campaigns.py  config_manager.py  cve_correlator.py  cvss_scorer.py  db_manager.py  deduplicator.py  installer.py  logger.py  notifier.py  parsers.py  plugin_loader.py  reporting.py  sarif_exporter.py  scope_manager.py  template_manager.py  tooling.py  ui.py  updater.py  utils.py  workspace_manager.py
aegis/templates/: __init__.py  custom_report.html  minimal_report.html  report.html  report.md
aegis/tools/: __init__.py
aegis/tools/exploit/: __init__.py  lfi.manifest.json  lfi.py  msf.py  net.manifest.json  net.py  oob.py  ssrf.manifest.json  ssrf.py  web.manifest.json  web.py
aegis/tools/post/: __init__.py  creds.manifest.json  creds.py  pivoting.manifest.json  pivoting.py  shell.manifest.json  shell.py
aegis/tools/recon/: __init__.py  activedirectory.py  cloud.py  dns.manifest.json  dns.py  domain.manifest.json  domain.py  network.manifest.json  network.py  osint.manifest.json  osint.py  screenshot.py  secrets.py
aegis/tools/report/: __init__.py  export.manifest.json  export.py  generate.manifest.json  generate.py
aegis/tools/vuln/: __init__.py  api.manifest.json  api.py  net.manifest.json  net.py  smuggling.py  ssl.manifest.json  ssl.py  web.manifest.json  web.py
aegis/tui/: __init__.py  app.py
aegis/web/: __init__.py  app.py
aegis/web/templates/: base.html  dashboard.html  finding_detail.html  findings.html  sessions.html
aegis/web/templates/partials/: notes.html
config/: config.yaml
scripts/: generate_changelog.py
tests/: bug_condition_test_results.md  conftest.py  test_ai_client.py  test_async_runner.py  test_bug_condition_lint_failures.py  test_cvss_scorer.py  test_db_manager.py  test_deduplicator.py  test_properties.py  test_reporting.py  test_scope_manager.py  test_workspace_manager.py
tests/integration/: test_cli_ai.py  test_cli_scope.py  test_cli_watch.py
